fix: fixes to services, tests and swagger
